# cafein

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
ci/: py310-conda.yaml  py311-conda.yaml  py312-conda.yaml  py313-conda.yaml  py314-conda.yaml
crates/cafein-core/: Cargo.toml
crates/cafein-core/src/: ch.rs  ch_tests.rs  exhaustive.rs  exhaustive_tests.rs  fares.rs  fares_tests.rs  geometry.rs  geometry_tests.rs  journey.rs  lib.rs  mcraptor.rs  mcraptor_tests.rs  mctbtr.rs  mctbtr_tests.rs  mcultra.rs  mcultra_tests.rs  path_key.rs  raptor.rs  raptor_tests.rs  router.rs  routers.rs  streets.rs  streets_tests.rs  tbtr.rs  tbtr_tests.rs  timetable.rs  timetable_tests.rs  transfers.rs  transfers_tests.rs  ultra.rs  ultra_tests.rs
crates/cafein-core/src/routers/: mc_bounds.rs  mcraptor.rs  mctbtr.rs  raptor.rs  router.rs  tbtr.rs
crates/cafein-core/src/routers/mcraptor/: bag.rs  products.rs  search.rs  stats.rs  tests.rs
crates/cafein-core/src/routers/mctbtr/: engine.rs  matrices.rs  scan.rs  set.rs  stats.rs  tests.rs
crates/cafein-core/src/routers/raptor/: costs.rs  matrices.rs  search.rs  tests.rs
crates/cafein-core/src/routers/tbtr/: costs.rs  engine.rs  matrix.rs  set.rs  tests.rs  tokens.rs  view.rs
crates/cafein-core/src/streets/: geo.rs  graph.rs  index.rs  paths.rs  search.rs  snap.rs  tests.rs
crates/cafein-geom/: Cargo.toml
crates/cafein-geom/src/: lib.rs
crates/cafein-gtfs/: Cargo.toml
crates/cafein-gtfs/src/: lib.rs  model.rs  qa.rs  qa_tests.rs  read.rs  read_tests.rs  service.rs  service_tests.rs  timetable.rs  timetable_tests.rs
crates/cafein-gtfs/tests/: helsinki_feed.rs  helsinki_services.rs  helsinki_timetable.rs
crates/cafein-gtfs/tests/common/: mod.rs
crates/cafein-py/: Cargo.toml
crates/cafein-py/src/: artifact.rs  cost_matrices.rs  frontiers.rs  lib.rs  network.rs  options.rs  points.rs  routes.rs  time_matrices.rs
python/cafein/: __init__.py  _osm.py  emissions.py  fares.py  frontier.py  geometry.py  itineraries.py  matrices.py  network.py  streets.py
scripts/: benchmark_grid.py  benchmark_mcultra.py  benchmark_vs_r5py.py  compare_fares_vs_r5r.py  compare_vs_r5py.py  fetch_test_data.py  ladder.py
tests/: conftest.py  test_emissions.py  test_exclusions.py  test_fares.py  test_frontier.py  test_geometry.py  test_itineraries.py  test_matrices.py  test_osm_extraction.py  test_package.py  test_regressions.py  test_router_auto.py  test_serialization.py  test_streets.py  test_transport_network.py  test_ultra.py
tests/rust/: Cargo.toml  helsinki_routing.rs  helsinki_tbtr.rs  helsinki_timetable.rs
tests/rust/common/: mod.rs
