[workspace]
resolver = "2"
members = [
    "crates/cafein-core",
    "crates/cafein-gtfs",
    "crates/cafein-geom",
    "crates/cafein-py",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cafein-py/cafein"
authors = ["Henrikki Tenkanen"]

[workspace.dependencies]
cafein-core = { path = "crates/cafein-core", version = "0.0.1" }
chrono = { version = "0.4", default-features = false }
gtfs-structures = { version = "0.48", default-features = false }

[profile.release]
lto = "thin"

# Optimize dependencies even in dev/test builds; parsing the multi-million-row
# test feeds is unusably slow with unoptimized csv/serde.
[profile.dev.package."*"]
opt-level = 2
