[workspace]
resolver = "2"
members = [
    "crates/cafein-core",
    "crates/cafein-gtfs",
    "crates/cafein-py",
    "tests/rust",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cafein-py/cafein"
authors = ["Henrikki Tenkanen"]

[workspace.dependencies]
cafein-core = { path = "crates/cafein-core", version = "0.2.0" }
cafein-gtfs = { path = "crates/cafein-gtfs", version = "0.2.0" }
bincode = "1.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
gtfs-structures = { version = "0.48", default-features = false }
numpy = "0.23"
rayon = "1.10"
rstar = "0.13"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"

# Optimize dependencies even in dev/test builds; parsing the multi-million-row
# test feeds is unusably slow with unoptimized csv/serde.
[profile.dev.package."*"]
opt-level = 2
