[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "cafein"
description = "Public-transport routing with per-leg distance and emissions tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Henrikki Tenkanen" }]
keywords = [
    "public transport",
    "routing",
    "GTFS",
    "OpenStreetMap",
    "emissions",
    "accessibility",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "geopandas>=0.14",
    "numpy",
    "pandas",
    "pyrosm>=0.11.0",
    "scipy>=1.8",
    "shapely>=2.0",
]

[project.optional-dependencies]
yaml = ["pyyaml"]

[project.urls]
Repository = "https://github.com/cafein-py/cafein"
"Issue Tracker" = "https://github.com/cafein-py/cafein/issues"

[tool.maturin]
manifest-path = "crates/cafein-py/Cargo.toml"
python-source = "python"
module-name = "cafein._cafein"

[tool.black]
include = '(python/cafein|tests)/.*\.py$'

[tool.pytest.ini_options]
testpaths = ["tests"]
