[package]
name = "cafein-core"
description = "Transit data model and routing algorithms for cafein"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rayon.workspace = true
rstar.workspace = true
serde.workspace = true
